# olympiad-bench

./: .env.example  .gitignore  BROAD_IPHO_PLAN.md  README.md  RESOURCES.md  SCHEMA_NOTES.md  pyproject.toml
envs/common/: calculator.py  load_task.py  noise.py  spec_schema.py
envs/common/tests/: test_calculator.py
envs/physics/: mechanics_ode.py
eval/: run_baselines.py  run_model.sh  scorers.py
eval/tasks/: ipho_2018_E2.py
eval/tests/: test_scorer_on_reference.py
tasks/ipho/2018_E2_viscoelasticity/: env.py  problem.md  reference_solution.py  spec.yaml
tasks/ipho/2018_E2_viscoelasticity/tests/: test_budgets.py  test_reference_replay.py  test_reference_replay_randomized.py
